src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-ofT-dwF1000-dhU-b-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen floating: true\ndefault column width: F1000\ndefault window height: U\nborder on\nwant fullscreen: BN"
expression: snapshot
---
initial configure:
size: 1000 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
