src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-ofT-dwF1000-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen floating: true\ndefault column width: F1000\ntabbed"
expression: snapshot
---
initial configure:
size: 1000 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
